<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.4"
            android:scaleType="centerCrop"
            android:src="@drawable/bg" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:paddingTop="18dp"
                android:text="The Anime Quiz!"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/first_q"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_q"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/first_question_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/first_q_wrong_a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_q_first_a"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/first_q_correct_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_q_second_a"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/first_q_wrong_a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_q_third_a"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/first_q_wrong_a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_q_fourth_a"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>


            <TextView
                android:id="@+id/second_q"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_q"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/second_question_answers"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/second_q_wrong_a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second_q_first_a"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/second_q_wrong_a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second_q_second_a"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/second_q_wrong_a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second_q_third_a"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/second_q_correct_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second_q_fourth_a"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>


            <TextView
                android:id="@+id/third_q"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_q"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/third_question_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/third_q_wrong_a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/third_q_first_a"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/third_q_correct_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/third_q_second_a"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/third_q_wrong_a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/third_q_third_a"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/third_q_wrong_a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/third_q_fourth_a"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>

            <TextView
                android:id="@+id/fourth_q"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourth_q"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/fourth_question_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/fourth_q_wrong_a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fourth_q_first_a"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/fourth_q_correct_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fourth_q_second_a"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/fourth_q_wrong_a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fourth_q_third_a"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/fourth_q_wrong_a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fourth_q_fourth_a"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>
            <TextView
                android:id="@+id/fifth_q"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifth_q"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/text_entry_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=""
                android:inputType="number" />

            <TextView
                android:id="@+id/sixth_q"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sixth_q"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <CheckBox
                android:id="@+id/sixth_q_wrong_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sixth_q_first_a"
                android:textAppearance="?android:textAppearanceMedium" />
            <CheckBox
                android:id="@+id/sixth_q_correct_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sixth_q_second_a"
                android:textAppearance="?android:textAppearanceMedium" />
            <CheckBox
                android:id="@+id/sixth_q_correct_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sixth_q_third_a"
                android:textAppearance="?android:textAppearanceMedium" />
            <CheckBox
                android:id="@+id/sixth_q_wrong_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sixth_q_fourth_a"
                android:textAppearance="?android:textAppearanceMedium" />
            <CheckBox
                android:id="@+id/sixth_q_wrong_a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sixth_q_fifth_a"
                android:textAppearance="?android:textAppearanceMedium" />
            <CheckBox
                android:id="@+id/sixth_q_correct_a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sixth_q_sixth_a"
                android:textAppearance="?android:textAppearanceMedium" />

            <Button
                android:id="@+id/calculateScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="calculateScore"
                android:text="Calculate Score" />
<!--            <TextView-->
<!--                android:id="@+id/final_score"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginRight="20dp"-->
<!--                android:text="0"-->
<!--                android:textAppearance="@style/TextAppearance.AppCompat.Large"-->
<!--                android:textColor="@color/white"-->
<!--                android:textStyle="bold" />-->

            <!--    <CheckBox-->
            <!--        android:id="@+id/notify_me_checkbox"-->
            <!--        android:layout_width="wrap_content"-->
            <!--        android:layout_height="wrap_content"-->
            <!--        android:text="@string/first_q_first_a"-->
            <!--        android:textAppearance="?android:textAppearanceMedium" />-->
            <!--    <CheckBox-->
            <!--        android:id="@+id/notify_me_checkbox"-->
            <!--        android:layout_width="wrap_content"-->
            <!--        android:layout_height="wrap_content"-->
            <!--        android:text="@string/first_q_first_a"-->
            <!--        android:textAppearance="?android:textAppearanceMedium" />-->

        </LinearLayout>
    </ScrollView>
</RelativeLayout>